Add log, ln, sin, cos, tan, min, max functions, implicit multiplication, and smart percentage - Add token kinds for COMMA and PERCENT - Add single-arg functions log, ln, sin, cos, tan and multi-arg functions min(a,b), max(a,b) - Add insertImplicitMultiplication token pass for parens, functions, units, and nested terms - Add standalone percentage evaluation (10% -> 0.1) and additive/subtractive percentage logic (100 + 10% -> 110)